k8s/apps/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: order-api
        image: aiinfraacr2901.azurecr.io/order-api:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: order-api
  namespace: default
spec:
  selector:
    app: order-api
  ports:
  - port: 80
    targetPort: 8080
